welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:-33: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-32: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-18: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^Runner:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^